--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "body-parser": "^1.19.0",
         "colors": "^1.4.0",
         "convict": "^6.0.0",
+        "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "custom-env": "^2.0.1",
         "debug": "^4.1.1",
