--- a/package.json
+++ b/package.json
@@ -1,83 +1,82 @@
 {
-    "name": "getting_started_api",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "jest --config jest.config.js --coverage",
-        "test:watch": "npm run test -- --watch",
-        "dev": "cross-env CONFIG_ENV=development nodemon index.js",
-        "start": "node index.js",
-        "lint": "eslint . --ext=.js"
-    },
-    "keywords": [],
-    "author": "NABE Bammoy Minkitam",
-    "license": "UNLICENSED",
-    "dependencies": {
-        "async": "^3.2.0",
-        "bcryptjs": "^2.4.3",
-        "bluebird": "^3.7.2",
-        "body-parser": "^1.19.0",
-        "colors": "^1.4.0",
-        "convict": "^6.0.0",
-        "cookie-parser": "^1.4.5",
-        "cors": "^2.8.5",
-        "custom-env": "^2.0.1",
-        "debug": "^4.1.1",
-        "dotenv": "^8.2.0",
-        "express": "^4.17.1",
-        "express-rate-limit": "^5.1.3",
-        "express-validator": "^6.6.1",
-        "googleapis": "^59.0.0",
-        "handlebars": "^4.7.6",
-        "helmet": "^4.1.0",
-        "jsonwebtoken": "^8.5.1",
-        "libphonenumber-js": "^1.7.57",
-        "lodash": "^4.17.20",
-        "moment": "^2.27.0",
-        "mongoose": "^5.10.2",
-        "morgan": "^1.10.0",
-        "multer": "^1.4.2",
-        "node-cache": "^5.1.2",
-        "nodemailer": "^6.4.11",
-        "rand-token": "^1.0.1",
-        "rate-limit-redis": "^2.0.0",
-        "redis": "^3.0.2",
-        "uuid": "^8.3.0",
-        "winston": "^3.3.3"
-    },
-    "devDependencies": {
-        "babel-eslint": "^10.1.0",
-        "cross-env": "^7.0.2",
-        "eslint": "^7.8.1",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-config-standard": "^14.1.1",
-        "eslint-loader": "^4.0.2",
-        "eslint-plugin-html": "^6.0.3",
-        "eslint-plugin-import": "^2.22.0",
-        "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-prettier": "^3.1.4",
-        "eslint-plugin-promise": "^4.2.1",
-        "eslint-plugin-standard": "^4.0.1",
-        "eslint-plugin-vue": "^6.2.2",
-        "faker": "^5.1.0",
-        "husky": "^4.2.5",
-        "jest": "^26.4.2",
-        "lint-staged": "^10.3.0",
-        "nodemon": "^2.0.4",
-        "prettier": "^2.1.1",
-        "supertest": "^4.0.2"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged && npm run test -- --bail --ci"
-        }
-    },
-    "lint-staged": {
-        "*.js": [
-            "prettier --write",
-            "eslint --fix",
-            "git add"
-        ]
+  "name": "getting_started_api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "jest --config jest.config.js --coverage",
+    "test:watch": "npm run test -- --watch",
+    "dev": "cross-env CONFIG_ENV=development nodemon index.js",
+    "start": "node index.js",
+    "lint": "eslint . --ext=.js"
+  },
+  "keywords": [],
+  "author": "NABE Bammoy Minkitam",
+  "license": "UNLICENSED",
+  "dependencies": {
+    "async": "^3.2.0",
+    "bcryptjs": "^2.4.3",
+    "bluebird": "^3.7.2",
+    "body-parser": "^1.19.0",
+    "colors": "^1.4.0",
+    "convict": "^6.0.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "custom-env": "^2.0.1",
+    "debug": "^4.1.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
+    "express-validator": "^6.6.1",
+    "googleapis": "^59.0.0",
+    "handlebars": "^4.7.6",
+    "helmet": "^4.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "libphonenumber-js": "^1.7.57",
+    "lodash": "^4.17.20",
+    "moment": "^2.27.0",
+    "mongoose": "^5.10.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "node-cache": "^5.1.2",
+    "nodemailer": "^6.4.11",
+    "rand-token": "^1.0.1",
+    "rate-limit-redis": "^2.0.0",
+    "redis": "^3.0.2",
+    "uuid": "^8.3.0",
+    "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "cross-env": "^7.0.2",
+    "eslint": "^7.8.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-html": "^6.0.3",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^6.2.2",
+    "faker": "^5.1.0",
+    "husky": "^4.2.5",
+    "jest": "^26.4.2",
+    "lint-staged": "^10.3.0",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.1.1",
+    "supertest": "^4.0.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && npm run test -- --bail --ci"
     }
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "eslint --fix"
+    ]
+  }
 }
